--- a/azure-pipeline-CI.yaml
+++ b/azure-pipeline-CI.yaml
@@ -21,6 +21,11 @@ stages:
       - job: Test
         displayName: Test
         steps:
+          - task: CmdLine@2
+            inputs:
+              script: |
+                mkdir -p ~/.m2
+                echo "$(settings.xml)" > "$HOME/.m2/settings.xml"
           - task: MavenAuthenticate@0
             inputs:
               artifactsFeeds: sdk-snapshots, EFS-SDK
@@ -48,6 +53,11 @@ stages:
         displayName: Build
         condition: and(succeeded(), not(startsWith(variables['Build.SourceBranch'], 'refs/pull/')))
         steps:
+          - task: CmdLine@2
+            inputs:
+              script: |
+                mkdir -p ~/.m2
+                echo "$(settings.xml)" > "$HOME/.m2/settings.xml"
           - task: MavenAuthenticate@0
             inputs:
               artifactsFeeds: sdk-snapshots, EFS-SDK
