--- a/azure-pipeline-template.yml
+++ b/azure-pipeline-template.yml
@@ -31,9 +31,18 @@ stages:
       - job: Test
         displayName: Test
         steps:
+          - task: CmdLine@2
+            inputs:
+              script: |
+                mkdir -p ~/.m2
+                echo "$(settings.xml)" > "$HOME/.m2/settings.xml"
           - task: MavenAuthenticate@0
             inputs:
               artifactsFeeds: sdk-snapshots, EFS-SDK
+          - task: CmdLine@2
+            inputs:
+              script: |
+                echo "$HOME/.m2/settings.xml"
           - task: Maven@3
             inputs:
               mavenPomFile: 'pom.xml'
@@ -60,6 +69,11 @@ stages:
         displayName: Build
         condition: and(succeeded(), not(startsWith(variables['Build.SourceBranch'], 'refs/pull/')))
         steps:
+          - task: CmdLine@2
+            inputs:
+              script: |
+                mkdir -p ~/.m2
+                echo "$(settings.xml)" > "$HOME/.m2/settings.xml"
           - task: MavenAuthenticate@0
             inputs:
               artifactsFeeds: sdk-snapshots, EFS-SDK
