fix: secret definition

--- a/kubernetes/provided-secrets.yml
+++ b/kubernetes/provided-secrets.yml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 ---
 apiVersion: v1
-stringDdata:
+stringData:
   spring.kafka.properties.sasl.jaas.config: $(KAFKA_SASL_JAAS_CONFIG)
 kind: Secret
 metadata:
